# VapourSynth-DCTFilter

./: LICENSE  Makefile.am  README.md  configure.ac  meson.build  pyproject.toml
.github/workflows/: build.yaml  build.yml
DCTFilter/: DCTFilter.cpp  DCTFilter.vcxproj  DCTFilter.vcxproj.filters
