[build-system]
requires = ["meson-python", "VapourSynth>=74"]
build-backend = "mesonpy"

[project]
name = "vapoursynth-dctfilter"
description = "DCT/IDCT Frequency Suppressor"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["vapoursynth", "dctfilter"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Plugins",
  "Natural Language :: English",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Programming Language :: C++",
  "Topic :: Multimedia :: Video",
]
dependencies = ["VapourSynth>=74"]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/HomeOfVapourSynthEvolution/VapourSynth-DCTFilter"
Issues = "https://github.com/HomeOfVapourSynthEvolution/VapourSynth-DCTFilter/issues"

[tool.meson-python.wheel]
exclude = ["*.dll.a"]
